--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Easyscrapy</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>EasySracpy</title>
+    <meta name="description" content="EasySracpy" />
+    <meta name="author" content="EasySracpy" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
-    <meta property="og:title" content="marketplace-scraper-pro" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="EasySracpy" />
+    <meta property="og:description" content="EasySracpy" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@EasySracpy" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
